<resources>
    <string name="app_name">GOT-android</string>
    <string name="mateusz_pu09">PU/09 - Zarządzanie odznakami</string>
    <string name="mateusz_pu08">PU/08 - Przeglądanie profilu turysty</string>
    <string name="michal_pu10">PU/10 - Dołączenie do wycieczki</string>
    <string name="michal_pu16">PU/16 - Zarządzanie szlakami górskimi</string>
    <string name="manage_trips">Zarządzaj wycieczkami</string>
    <string name="manage_segments">Zarządzaj szlakami górskimi</string>
    <string name="report_bugs">Zgłoszenia usterek</string>
    <string name="email_address">Email address</string>
    <string name="end_point_id_hint"><i>Identyfikator punktu końcowego</i></string>
    <string name="start_point_id_hint"><i>Identyfikator punktu początkowego</i></string>
    <string name="segment_id_hint"><i>Identyfikator odcinka</i></string>
    <string name="segment_name_hint"><i>Nazwa odcinka</i></string>
    <string name="segment_region_id_hint"><i>Region odcinka</i></string>
    <string name="add_segment">Dodaj odcinek</string>
    <string name="throw_changes">Porzucić zmiany?</string>
    <string name="throw_changes_expl">Czy na pewno chcesz porzucić zmiany?</string>
    <string name="yes">Tak</string>
    <string name="abort">Anuluj</string>

    <string name="segment_name"><i>nazwa</i>: <b>%1$s</b></string>
    <string name="segment_length"><i>długość</i>: <b>%1$s</b></string>
    <string name="segment_id"><i>identyfikator</i>: <b>%1$d</b></string>
    <string name="segment_status"><i>status</i>: <b>%1$s</b></string>
    <string name="open_segment">Otwórz odcinek</string>
    <string name="close_segment">Zamknij odcinek</string>
    <string name="members">Uczestnicy</string>
    <string name="join_to_trip_question">Czy na pewno chcesz tołączyć do wycieczki?</string>
    <string name="lets_go">W drogę!</string>
    <string name="remember_about_trip_must_haves">Pamiętaj o ciepłym ubraniu i świetnym chumorze! Widzimy się na szlaku!</string>
    <string name="joined_to_trip">Gratulacje właśnie dołączyłeś do wycieczki!</string>
    <string name="achieved_order">Zdobyte odznaki</string>
    <string name="recent_trips">Ostatnie wycieczki</string>
    <string name="gained_points">Zdobyte punkty</string>
    <string name="achieved_orders">Zdobyte odznaki</string>
    <string name="motto">motto</string>
    <string name="motto_text">Sukces nigdy nie jest efektem słomianego zapału, tutaj trzeba przejść przez prawdziwy ognień</string>
    <string name="length">Dystans</string>
    <string name="map">Mapa</string>
    <string name="zdobyte_punkty_w_2020">Zdobyte punkty w 2020</string>
    <string name="trips_label">Odbyte wycieczki</string>
    <string name="badges_label">Zdobyte odznaki</string>
    <string name="user_description">Jestem pasjonatem wspinaczki górskiej oraz chodzienia po szlakach polskich gór</string>
    <string name="date">Data</string>
    <string name="achieved_orders_number">Liczba zdobytych odznak</string>
    <string name="achievable_orders_label">W tym roku możesz zdobyć:</string>
    <string name="non_achievable_orders_label">Tyle punktów ci brakuje:</string>
    <string name="gained_points_in_year">Zdobyte punkty w roku </string>
    <string name="request_badge_text">Wyślij prośbę o przyznanie odznaki</string>
    <string name="send">Wyślij</string>
    <string name="no_badges_error">Brak odznak do zdobycia w tym roku!</string>

</resources>