<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/container_background">
    <com.apusart.got_android.ui.components.HeaderView
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:header_view_title="Przypadki użycia"
        app:header_view_subtitle="Pomoc dla prowadzącego :)"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/mateusz_pu09"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_header"
        app:layout_constraintBottom_toTopOf="@id/mateusz_pu08"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mateusz_pu09"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto14Pt"
                android:text="Mateusz Groblicki"
                android:gravity="center"
                android:textColor="@color/text_green"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/mateusz_pu08"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mateusz_pu09"
        app:layout_constraintBottom_toTopOf="@id/michal_pu10"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mateusz_pu08"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto14Pt"
                android:text="Mateusz Groblicki"
                android:gravity="center"
                android:textColor="@color/text_green"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/michal_pu10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mateusz_pu08"
        app:layout_constraintBottom_toTopOf="@id/michal_pu16"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TitleRoboto20Pt"
                android:textColor="@color/text_green"
                android:text="@string/michal_pu10"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto14Pt"
                android:text="Michał Raszczuk"
                android:gravity="center"
                android:textColor="@color/text_green"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/michal_pu16"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/michal_pu10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/primary_900"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/michal_pu16"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto14Pt"
                android:text="Michał Raszczuk"
                android:gravity="center"
                android:textColor="@color/text_green"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>