<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/container_background">
    <com.apusart.got_android.ui.components.HeaderView
        android:id="@+id/admin_panel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:header_view_title="Panel Administratora"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/manage_trips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/admin_panel_header"
        app:layout_constraintBottom_toTopOf="@id/manage_accounts"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manage_trips"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/manage_accounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_trips"
        app:layout_constraintBottom_toTopOf="@id/manage_segments"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Zarządzaj kontami"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/manage_segments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_accounts"
        app:layout_constraintBottom_toTopOf="@id/report_bugs"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TitleRoboto20Pt"
                android:textColor="@color/text_green"
                android:text="@string/manage_segments"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/report_bugs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_segments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/primary_900"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_green_ripple"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/report_bugs"
                android:textColor="@color/text_green"
                style="@style/TitleRoboto20Pt"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>