<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <com.apusart.got_android.ui.components.HeaderView
            android:id="@+id/trip_details_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_view_leading_icon="@drawable/back_icon128"
            app:header_view_title="Dołącz do wycieczki"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/primary_600">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trip_details_name"
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    tools:text="saddsadsa dsadsdsa dsadsa" />

                <TextView
                    android:id="@+id/trip_details_date"
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    tools:text="saddsadsa dsadsdsa dsadsa" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_backgorund"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_header_background"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Trasa"
                    android:textColor="@color/text_green" />

                <com.apusart.got_android.ui.components.MapView
                    android:id="@+id/trip_details_map"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primary_900" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/divider1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/Roboto14Pt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Punkt końcowy" />

                        <TextView
                            android:id="@+id/trip_details_start_point"
                            style="@style/TitleRoboto20Pt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center"
                            tools:text="Goleszów" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="@color/primary_900"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/divider1"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/Roboto14Pt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Punkt końcowy" />

                        <TextView
                            android:id="@+id/trip_details_end_point"
                            style="@style/TitleRoboto20Pt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center"
                            tools:text="Goleszów" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:id="@+id/trip_details_users_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_backgorund"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_header_background"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/text_green"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/members" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trip_details_users"
                    android:layout_width="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/trip_details_additional_users"
                    style="@style/TitleRoboto20Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    tools:text="+ 50" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <com.apusart.got_android.ui.components.ProgressButton
        android:id="@+id/trip_details_join_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:button_name="Dołącz do wycieczki"
        android:layout_margin="10dp"/>


    <LinearLayout
        android:id="@+id/trip_details_joined_trip_modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:visibility="gone">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/plus_icon64"
                    android:layout_gravity="center|top"
                    android:layout_marginVertical="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CaptionRoboto12Pt"
                    android:gravity="center"
                    android:text="@string/joined_to_trip"/>
                <TextView
                    android:id="@+id/trip_details_join_trip_modal_text"
                    android:layout_marginVertical="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Roboto14Pt"
                    android:textColor="@color/primary_900"
                    android:gravity="center"
                    tools:text="@string/joined_to_trip"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Roboto14Pt"
                    android:gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="40dp"
                    android:text="@string/remember_about_trip_must_haves"/>
                <Button
                    android:id="@+id/join_trip_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_button"
                    android:textColor="@color/text_green"
                    android:gravity="center"
                    android:text="@string/lets_go"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>